# OleanderStemmingLibrary

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.txt  CMakeLists.txt  Change Log.txt  Change-log.md  Changelog.md  Doxyfile  LICENSE  LICENSE.md  README.md  TestStemmer  common_lang_constants.h  danish_stem.h  doxygen.config  dutch_stem.h  english_stem.h  example.cpp  finnish_stem.h  french_stem.h  german_stem.h  italian_stem.h  license.txt  norwegian_stem.h  portuguese_stem.h  readme.md  russian_stem.h  spanish_stem.h  stemming.h  swedish_stem.h
.github/workflows/: codeql.yml  cppcheck.yml  doxygen.yml  i18n-check.yml  mac-unit-tests.yml  msvc.yml  quneiform.yml  spell-check.yml  unit-tests.yml  windows-unit-tests.yml
cmake/: BuildLocation.cmake  BuildType.cmake  CompilerFlags.cmake  OleanderStemmingLibraryConfig.cmake.in  OleanderStemmingLibraryConfigVersion.cmake.in
cmake/modules/: ClangFormat.cmake  CodeAnalysis.cmake  CompilerFlags.cmake
docs/: Doxyfile  english.md
docs/manual/: _quarto.yml  apostrophe.qmd  danish.qmd  dutch_porter.qmd  english.qmd  finnish.qmd  french.qmd  german.qmd  glossary.qmd  index.qmd  italian.qmd  norwegian.qmd  portuguese.qmd  r1r2.qmd  references.qmd  russian.qmd  spanish.qmd  swedish.qmd  vowelmarking.qmd
docs/manual/indices/: credits.qmd  glossary.qmd  license.qmd
docs/manual/overviews/: apostrophe.qmd  germanic.qmd  r1r2.qmd  romance.qmd  scandinavian.qmd  vowelmarking.qmd
include/olestem/indexing/: common_lang_constants.h  string_util.h
include/olestem/stemming/: danish_stem.h  dutch_stem.h  english_stem.h  finnish_stem.h  french_stem.h  german_stem.h  italian_stem.h  norwegian_stem.h  portuguese_stem.h  russian_stem.h  spanish_stem.h  stemming.h  swedish_stem.h
include/olestem/utilities/: debug_logic.h  safe_math.h  utilities.h
include/pstem/indexing/: common_lang_constants.h  string_util.h
include/pstem/stemming/: english_stem.h  finnish_stem.h  russian_stem.h  stemming.h
include/pstem/utilities/: debug_logic.h  safe_math.h  utilities.h
indexing/: common_lang_constants.h  string_util.h
samples/: CMakeLists.txt
samples/src/: example.cpp
src/: common_lang_constants.h  danish_stem.h  dutch_stem.h  english_stem.h  finnish_stem.h  french_stem.h  german_stem.h  italian_stem.h  norwegian_stem.h  portuguese_stem.h  russian_stem.h  spanish_stem.h  stemming.h  swedish_stem.h
stemming/: danish_stem.h  dutch_stem.h  english_stem.h  finnish_stem.h  french_stem.h  german_stem.h  italian_stem.h  norwegian_stem.h  portuguese_stem.h  russian_stem.h  spanish_stem.h  stemming.h  swedish_stem.h
tests/: CMakeLists.txt  englishtests.cpp  stemmingtests.cpp
tests/demo/: CMakeLists.txt  stemdemo.cpp
tests/src/: example.cpp  test_main.cpp  test_stemming.cpp
utilities/: debug_logic.h  safe_math.h  utilities.h
